--- a/www/app/components/sheet-creation/resources-tab.html
+++ b/www/app/components/sheet-creation/resources-tab.html
@@ -1,6 +1,6 @@
 <!--link href="../assets/bower_components/polymer/polymer.html" rel="import"-->
 
-<dom-module id="resources-tab">  
+<dom-module id="resources-tab">
     <template>
         <style>
             :host {
@@ -8,41 +8,42 @@
                 margin: auto;
                 @apply(--layout-vertical);
             }
-            
+
             #add-resources {
                 position: fixed;
                 bottom: 16px;
                 right: 16px;
             }
-            
+
             #space {
                 height: 64px;
             }
         </style>
-        
+
         <h3>Status</h3>
-        
-        <template is="dom-repeat" 
+
+        <template is="dom-repeat"
                   items="{{ resourcesList }}">
-            <resources-card name="{{ item.name }}" 
-                            value="{{ item.value }}" 
-                            base-value="{{ item.baseValue }}" 
-                            status-base="{{ item.statusBase }}" 
-                            status-base-modifier="{{ item.statusBaseModifier }}" 
-                            level-modifier="{{ item.levelModifier }}" 
-                            persist-bonus="{{ item.persistBonus }}" 
-                            volatile-bonus="{{ item.volatileBonus }}"></resources-card>
+            <resources-card name="{{ item.name }}"
+                            value="{{ item.value }}"
+                            base-value="{{ item.baseValue }}"
+                            status-base="{{ item.statusBase }}"
+                            status-base-modifier="{{ item.statusBaseModifier }}"
+                            level-modifier="{{ item.levelModifier }}"
+                            persist-bonus="{{ item.persistBonus }}"
+                            volatile-bonus="{{ item.volatileBonus }}"
+                            status-list="{{ statusList }}"></resources-card>
         </template>
-        
+
         <div id="space"></div>
-        
+
         <paper-fab noink
                    icon="add"
                    id="add-resources"
                    on-click="newResources"></paper-fab>
     </template>
 </dom-module>
-    
+
 <script>
     Polymer({
         is: "resources-tab",
