--- a/www/app/components/sheet-creation/resources-card.html
+++ b/www/app/components/sheet-creation/resources-card.html
@@ -76,57 +76,46 @@
         properties: {
             name: {
                 type: String,
-                value: "",
                 notify: true,
                 reflectToAttribute: true
             },
             value: {
                 type: String,
-                value: "0",
                 notify: true,
                 reflectToAttribute: true
             },
             baseValue: {
                 type: String,
-                value: "",
                 notify: true,
                 reflectToAttribute: true
             },
             statusBase: {
                 type: String,
-                value: "",
                 notify: true,
                 reflectToAttribute: true
             },
             statusBaseModifier: {
                 type: String,
-                value: "",
                 notify: true,
                 reflectToAttribute: true
             },
             levelModifier: {
                 type: String,
-                value: "",
                 notify: true,
                 reflectToAttribute: true
             },
             persistBonus: {
                 type: String,
-                value: "0",
                 notify: true,
                 reflectToAttribute: true
             },
             volatileBonus: {
                 type: String,
-                value: "0",
                 notify: true,
                 reflectToAttribute: true
             },
             statusList: {
-                type: Array,
-                value: [
-                    {name: "Test 1"}, {name: "Test 2"}, {name: "Test 3"}
-                ]
+                type: Array
             }
         },
         observers: [
