--- a/www/app/components/sheet-creation/resources-tab.html
+++ b/www/app/components/sheet-creation/resources-tab.html
@@ -65,12 +65,12 @@
         newResources: function(e){
             console.log("Resources Card Add");
             this.push("resourcesList", {
-                name: "",
+                name: "HP/MP/...",
                 value: 0,
                 baseValue: 0,
                 statusBase: "",
-                statusBaseModifier: 0,
-                levelModifier: 0,
+                statusBaseModifier: 1,
+                levelModifier: 0.5,
                 persistBonus: 0,
                 volatileBonus: 0
             });
