--- a/www/app/components/sheet-creation/sheet-creation.html
+++ b/www/app/components/sheet-creation/sheet-creation.html
@@ -11,9 +11,14 @@
             paper-tabs, paper-toolbar {
                 width: 100%;
                 z-index: 0;
-                position: fixed;
                 background-color: #9E9E9E;
                 color: #FFFFFF;
+            }
+            
+            iron-pages {
+                height: calc(100vh - 48px);
+                max-height: 100vh;
+                overflow-y: scroll;
             }
         </style>
         
