--- a/www/app/components/sheet-creation/sheet-creation.html
+++ b/www/app/components/sheet-creation/sheet-creation.html
@@ -1,35 +1,34 @@
 <!--link href="../../../assets/bower_components/polymer/polymer.html" rel="import"-->
 
-<dom-module id="sheet-creation">  
+<dom-module id="sheet-creation">
     <template>
         <style>
             :host {
                 width: 100%;
                 --paper-tabs-selection-bar-color: #03A9F4;
             }
-            
+
             paper-tabs, paper-toolbar {
                 width: 100%;
                 z-index: 0;
                 background-color: #9E9E9E;
                 color: #FFFFFF;
             }
-            
-            iron-pages {
-                height: calc(100vh - 48px);
-                max-height: 100vh;
-                overflow-y: scroll;
+
+            .tabs-pages {
+                height: calc(100vh - 112px);
+                overflow-y: auto;
             }
         </style>
-        
+
         <iron-localstorage name="localstorageSheetList"
                            value="{{ sheetList }}"></iron-localstorage>
-        
+
         <iron-localstorage name="localstorageBaseSheet"
                            value="{{ baseSheet }}"
                            on-iron-localstorage-load-empty="initializeDefaultBaseSheet"></iron-localstorage>
-        
-        <paper-tabs noink 
+
+        <paper-tabs noink
                     scrollable
                     selected="{{ selected }}">
             <paper-tab>Basico</paper-tab>
@@ -39,27 +38,28 @@
             <paper-tab>Skills</paper-tab>
         </paper-tabs>
 
-        <iron-pages selected="{{ selected }}">
-            
-            <basic-tab name="{{ newSheet.name }}" 
-                       job="{{ newSheet.job }}" 
-                       race="{{ newSheet.race }}" 
-                       level="{{ newSheet.level }}" 
+        <iron-pages selected="{{ selected }}"
+                    class="tabs-pages">
+
+            <basic-tab name="{{ newSheet.name }}"
+                       job="{{ newSheet.job }}"
+                       race="{{ newSheet.race }}"
+                       level="{{ newSheet.level }}"
                        system="{{ newSheet.system }}"></basic-tab>
-            
+
             <status-tab status-list="{{ newSheet.statusList }}"></status-tab>
-            
-            <resources-tab resources-list="{{ newSheet.resourcesList }}" 
+
+            <resources-tab resources-list="{{ newSheet.resourcesList }}"
                            status-list="{{ newSheet.statusList }}"></resources-tab>
-            
+
             <div>Defenses</div>
-            
+
             <div>Skills</div>
-            
+
         </iron-pages>
     </template>
 </dom-module>
-    
+
 <script>
     Polymer({
         is: "sheet-creation",
@@ -120,7 +120,7 @@
                         name: "",
                         value: 0,
                         baseValue: 0,
-                        statusBase:  null, 
+                        statusBase:  null,
                         statusBaseModifier: 0,
                         levelModifier: 0,
                         persistBonus: 0,
@@ -159,7 +159,7 @@
                     // *equipmentName: { effect1: { *value: 10, *affect: Armor }, ... }
                 },
                 persistBonusList: [],
-                // { name: "bonusName", *value: 10, *affect: Vit }, ...  Kind of: Equipment Bonus 
+                // { name: "bonusName", *value: 10, *affect: Vit }, ...  Kind of: Equipment Bonus
                 volatileBonusList: []
                 // { *name: "bonusName", *value: 10, *affect: Vit }, ...  Kind of: Potion Bonus
             }
