--- a/www/app/components/sheet-creation/sheet-creation.html
+++ b/www/app/components/sheet-creation/sheet-creation.html
@@ -87,7 +87,7 @@
         },
         _baseSheetChanged: function(e){
             console.log('Base Sheet Changed');
-            if(typeof this.newSheet == 'undefined'){
+            if(typeof this.newSheet == 'undefined' && this.baseSheet != null){
                 //this.newSheet = Object.create(this.baseSheet);
                 this.newSheet = Object.assign({}, this.baseSheet);
                 console.log('New Sheet Assigned as Base Sheet');
@@ -106,7 +106,7 @@
                 system: "",
                 statusList: [
                     {
-                        name: "",
+                        name: "Str/Dex/Int/...",
                         value: 0,
                         baseValue: 0,
                         levelModifier: 0,
@@ -117,12 +117,12 @@
                 // { *name: "vit", value: SUM, *baseValue: 10, *levelModifier: 0, persistBonus: 0, volatileBonus: 0 }, ...
                 resourcesList: [
                     {
-                        name: "",
+                        name: "HP/MP/...",
                         value: 0,
                         baseValue: 0,
                         statusBase:  null,
-                        statusBaseModifier: 0,
-                        levelModifier: 0,
+                        statusBaseModifier: 1,
+                        levelModifier: 0.5,
                         persistBonus: 0,
                         volatileBonus: 0
                     }
