Sheet Creation - Defenses
Add Defenses-Tab
Add Defenses-Card
Update Resources Tab

--- a/www/app/components/sheet-creation/resources-tab.html
+++ b/www/app/components/sheet-creation/resources-tab.html
@@ -20,7 +20,7 @@
             }
         </style>
 
-        <h3>Status</h3>
+        <h3>Resources</h3>
 
         <template is="dom-repeat"
                   items="{{ resourcesList }}">
