--- a/www/app/components/sheet-creation/sheet-creation.html
+++ b/www/app/components/sheet-creation/sheet-creation.html
@@ -19,14 +19,45 @@
                 height: calc(100vh - 112px);
                 overflow-y: auto;
             }
+
+            #save-sheet {
+                position: fixed;
+                right: 16px;
+                top: 120px;
+            }
+
+            @media (min-width: 490px) and (max-width: 600px) {
+                #save-sheet {
+                    position: fixed;
+                    right: 16px;
+                    top: 80px;
+                }
+            }
+
+            @media (min-width: 740px) {
+                #save-sheet {
+                    position: fixed;
+                    right: 16px;
+                    top: 80px;
+                }
+            }
         </style>
 
-        <iron-localstorage name="localstorageSheetList"
-                           value="{{ sheetList }}"></iron-localstorage>
+        <!--iron-localstorage name="localstorageSheetList"
+                           value="{{ sheetList }}"></iron-localstorage-->
 
-        <iron-localstorage name="localstorageBaseSheet"
+        <!--iron-localstorage name="localstorageBaseSheet"
                            value="{{ baseSheet }}"
                            on-iron-localstorage-load-empty="initializeDefaultBaseSheet"></iron-localstorage>
+
+        <iron-localstorage name="localstorageCreatingSheet"
+                           value="{{ creatingSheet }}"
+                           on-iron-localstorage-load-empty="initializeDefaultCreatingSheet"></iron-localstorage-->
+
+        <paper-fab noink
+                   icon="save"
+                   id="save-sheet"
+                   on-click="saveSheet"></paper-fab>
 
         <paper-tabs noink
                     scrollable
@@ -41,22 +72,22 @@
         <iron-pages selected="{{ selected }}"
                     class="tabs-pages">
 
-            <basic-tab name="{{ newSheet.name }}"
-                       job="{{ newSheet.job }}"
-                       race="{{ newSheet.race }}"
-                       level="{{ newSheet.level }}"
-                       system="{{ newSheet.system }}"></basic-tab>
+            <basic-tab name="{{ creatingSheet.name }}"
+                       job="{{ creatingSheet.job }}"
+                       race="{{ creatingSheet.race }}"
+                       level="{{ creatingSheet.level }}"
+                       system="{{ creatingSheet.system }}"></basic-tab>
 
-            <status-tab status-list="{{ newSheet.statusList }}"></status-tab>
+            <status-tab status-list="{{ creatingSheet.statusList }}"></status-tab>
 
-            <resources-tab resources-list="{{ newSheet.resourcesList }}"
-                           status-list="{{ newSheet.statusList }}"></resources-tab>
+            <resources-tab resources-list="{{ creatingSheet.resourcesList }}"
+                           status-list="{{ creatingSheet.statusList }}"></resources-tab>
 
-            <defenses-tab defenses-list="{{ newSheet.defensesList }}"
-                           status-list="{{ newSheet.statusList }}"></defenses-tab>
+            <defenses-tab defenses-list="{{ creatingSheet.defensesList }}"
+                           status-list="{{ creatingSheet.statusList }}"></defenses-tab>
 
-            <skills-tab skills-list="{{ newSheet.skillsList }}"
-                        status-list="{{ newSheet.statusList }}"></skills-tab>
+            <skills-tab skills-list="{{ creatingSheet.skillsList }}"
+                        status-list="{{ creatingSheet.statusList }}"></skills-tab>
 
         </iron-pages>
     </template>
@@ -69,124 +100,81 @@
             selected: {
                 type: String,
                 value: "0"
-            },
-            sheetList: {
-                type: Array
-            },
-            baseSheet: {
-                type: Object,
-                observer: '_baseSheetChanged'
-            },
-            newSheet: {
-                type: Object
             }
         },
         observers: [
-            '_modelUpdated(newSheet.*)'
+            '_modelUpdated(creatingSheet.*)'
         ],
         ready: function(e){
             console.log("Sheet Creation Loaded");
         },
-        _baseSheetChanged: function(e){
-            console.log('Base Sheet Changed');
-            if(typeof this.newSheet == 'undefined' && this.baseSheet != null){
-                //this.newSheet = Object.create(this.baseSheet);
-                this.newSheet = Object.assign({}, this.baseSheet);
-                console.log('New Sheet Assigned as Base Sheet');
-            }
-        },
         _modelUpdated: function(e){
             console.log('Model Update');
-            console.log(this.newSheet);
+            console.log(this.creatingSheet);
         },
-        initializeDefaultBaseSheet: function(e){
-            this.baseSheet = {
-                name: "",
-                job: "",
-                race: "",
-                level: "1",
-                system: "",
-                statusList: [
-                    {
-                        name: "Str/Dex/Int/...",
-                        value: 0,
-                        baseValue: 0,
-                        levelModifier: 0,
-                        persistBonus: 0,
-                        volatileBonus: 0
-                    }
-                ],
-                // { *name: "vit", value: SUM, *baseValue: 10, *levelModifier: 0, persistBonus: 0, volatileBonus: 0 }, ...
-                resourcesList: [
-                    {
-                        name: "HP/MP/...",
-                        value: 0,
-                        baseValue: 0,
-                        statusBase:  null,
-                        statusBaseModifier: 1,
-                        levelModifier: 0.5,
-                        persistBonus: 0,
-                        volatileBonus: 0
-                    }
-                ],
-                // { *name: "hp", value: SUM, *baseValue: 10, *statusBase: Vit, *statusBaseModifier: 1, *levelModifier: 0, persistBonus: 0, volatileBonus: 0 }, ...
-                defensesList: [
-                    {
-                        name: "Armor/Magic Resistence/...",
-                        value: 0,
-                        baseValue: 10,
-                        statusBase: null,
-                        statusBaseModifier: 1,
-                        levelModifier: 0.5,
-                        persistBonus: 0,
-                        volatileBonus: 0
-                    }
-                ],
-                // { *name: "armor", value: SUM, *baseValue: 10, *statusBase: Vit, *statusBaseModifier: 1, *levelModifier: 0, persistBonus: 0, volatileBonus: 0 }, ...
-                attacksList: [],
-                // { *name: "attackName", AttackValue: SUM, DamageValue: SUM, *baseAttack: 10, *attackStatusBase: Vit, *attackStatusBaseModifier: 1, *attackLevelModifier: 0, attackpersistBonus: 0, attackVolatileBonus: 0, *baseDamage: 10, *damageStatusBase: Vit, *damageStatusBaseModifier: 1, *damageLevelModifier: 0, damagepersistBonus: 0, damageVolatileBonus: 0 }, ...
-                skillsList: [
-                    {
-                        name: "Diplomacy/Heal...",
-                        value: 0,
-                        baseValue: 10,
-                        statusBase: null,
-                        statusBaseModifier: 1,
-                        levelModifier: 0.5,
-                        persistBonus: 0,
-                        volatileBonus: 0
-                    }
-                ],
-                // { *name: "skillName", value: SUM, *baseValue: 10, *statusBase: Vit, *statusBaseModifier: 1, *levelModifier: 0, persistBonus: 0, volatileBonus: 0 }, ...
-                equipments: {
-                    head: {},
-                    // *equipmentName: { effect1: { *value: 10, *affect: Armor }, ... }
-                    chest: {},
-                    // *equipmentName: { effect1: { *value: 10, *affect: Armor }, ... }
-                    legs: {},
-                    // *equipmentName: { effect1: { *value: 10, *affect: Armor }, ... }
-                    feet: {},
-                    // *equipmentName: { effect1: { *value: 10, *affect: Armor }, ... }
-                    hands: {},
-                    // *equipmentName: { effect1: { *value: 10, *affect: Armor }, ... }
-                    cloak: {},
-                    // *equipmentName: { effect1: { *value: 10, *affect: Armor }, ... }
-                    waist: {},
-                    // *equipmentName: { effect1: { *value: 10, *affect: Armor }, ... }
-                    wrist: {},
-                    // *equipmentName: { effect1: { *value: 10, *affect: Armor }, ... }
-                    trinkets: {},
-                    // *equipmentName: { effect1: { *value: 10, *affect: Armor }, ... }, ...
-                    weapon: {},
-                    // *equipmentName: { *type: 1, *attack: 10, *damage: 10, effect1: { *value: 10, *affect: Armor }, ... }
-                    shield: {}
-                    // *equipmentName: { effect1: { *value: 10, *affect: Armor }, ... }
-                },
-                persistBonusList: [],
-                // { name: "bonusName", *value: 10, *affect: Vit }, ...  Kind of: Equipment Bonus
-                volatileBonusList: []
-                // { *name: "bonusName", *value: 10, *affect: Vit }, ...  Kind of: Potion Bonus
-            }
+        saveSheet: function(e){
+            console.log('Saving Sheet');
+            // Need to Verify  Each Status, Resource, Defense and Skill and SUM
+
+            var scAtt = this;
+
+            // SUM Status = baseValue + (levelModifier * level)
+            this.creatingSheet.statusList.forEach(
+                function(status, index){
+                    status.value = parseInt(status.baseValue) + (parseInt(status.levelModifier) * parseInt(scAtt.creatingSheet.level));
+                }
+            );
+
+            // SUM Resource = baseValue + (statusBase.value * statusBaseModifier) + (levelModifier * level)
+            this.creatingSheet.resourcesList.forEach(
+                function(resource, index){
+                    var baseStatusValue = scAtt.creatingSheet.statusList[
+                        scAtt.creatingSheet.statusList.map(
+                            function(obj) {
+                                return obj.name;
+                            }
+                        ).indexOf(resource.statusBase)
+                    ].value;
+
+                    resource.value = parseInt(resource.baseValue) + (parseInt(resource.statusBaseModifier) * parseInt(baseStatusValue)) + (parseInt(resource.levelModifier) * parseInt(scAtt.creatingSheet.level));
+                }
+            );
+
+            // SUM Defense = baseValue + (statusBase.value * statusBaseModifier) + (levelModifier * level)
+            this.creatingSheet.defensesList.forEach(
+                function(defense, index){
+                    var baseStatusValue = scAtt.creatingSheet.statusList[
+                        scAtt.creatingSheet.statusList.map(
+                            function(obj) {
+                                return obj.name;
+                            }
+                        ).indexOf(defense.statusBase)
+                    ].value;
+
+                    defense.value = parseInt(defense.baseValue) + (parseInt(defense.statusBaseModifier) * parseInt(baseStatusValue)) + (parseInt(defense.levelModifier) * parseInt(scAtt.creatingSheet.level));
+                }
+            );
+
+            // SUM Skill = baseValue + (statusBase.value * statusBaseModifier) + (levelModifier * level)
+            this.creatingSheet.skillsList.forEach(
+                function(skill, index){
+                    var baseStatusValue = scAtt.creatingSheet.statusList[
+                        scAtt.creatingSheet.statusList.map(
+                            function(obj) {
+                                return obj.name;
+                            }
+                        ).indexOf(skill.statusBase)
+                    ].value;
+
+                    skill.value = parseInt(skill.baseValue) + (parseInt(skill.statusBaseModifier) * parseInt(baseStatusValue)) + (parseInt(skill.levelModifier) * parseInt(scAtt.creatingSheet.level));
+                }
+            );
+
+            this.sheetList.push( scAtt.creatingSheet );
+            this.fire('saveSheetListRequest', { newList: scAtt.sheetList });
+            this.fire('clearCreatingSheetRequest');
+
+            console.log('Sheet Saved');
         }
     });
 </script>
