--- a/www/app/components/sheet-creation/defenses-tab.html
+++ b/www/app/components/sheet-creation/defenses-tab.html
@@ -68,7 +68,7 @@
 				name: "Armor",
 				value: 0,
 				baseValue: 0,
-				statusBase: null,
+				statusBase: "None",
 				statusBaseModifier: 1,
 				levelModifier: 0.5,
 				persistBonus: 0,
