--- a/www/app/components/sheet-creation/resources-tab.html
+++ b/www/app/components/sheet-creation/resources-tab.html
@@ -68,7 +68,7 @@
                 name: "HP/MP/...",
                 value: 0,
                 baseValue: 0,
-                statusBase: "",
+                statusBase: "None",
                 statusBaseModifier: 1,
                 levelModifier: 0.5,
                 persistBonus: 0,
