--- a/www/app/components/sheet-creation/skills-tab.html
+++ b/www/app/components/sheet-creation/skills-tab.html
@@ -68,7 +68,7 @@
                 name: "Diplomacy/Heal...",
                 value: 0,
                 baseValue: 10,
-                statusBase: null,
+                statusBase: "None",
                 statusBaseModifier: 1,
                 levelModifier: 0.5,
                 persistBonus: 0,
